# pet

./: CLAUDE.md  MACROGUIDE.md  MACROGUIDE.md.pet  PET-LLM.md  RATIONALE.md  RATIONALE.md.pet  README.md  README.md.pet  README2.md  README2.md.pet  SKILL.md  build  localinstall.sh  pet.py  pyproject.toml  test.md  test.md.pet  test.txt
.github/workflows/: ci.yml
.pet/: counters.py  include.py  text.py
src/pet/: AUTHORING_SKILL.md  SKILL.md  __main__.py  cli.py  processor.py
src/pet/macros/: chapter.py  counters.py  dedent.py  include.md  include.py  number.py  pipe.py  snippet.md  snippet.py  text.md  transformer.py
src/pet/macros/data/: _node.py  env.py  json.py  properties.py  toml.py  xml.py  yaml.py
tests/: test_chapter.py  test_chapter_template.py  test_cli.py  test_counters.py  test_dedent.py  test_env.py  test_include.py  test_json.py  test_number.py  test_pipe.py  test_processor.py  test_properties.py  test_snippet.py  test_text.py  test_toml.py  test_transformer.py  test_watch.py  test_xml.py  test_yaml.py
tests/chapter/: test.md  test.md.pet
tests/env/: sample.env
tests/json/: package.json
tests/properties/: sample.properties
tests/snippet/: run.sh  sample.c  snippet_test.md  snippet_test.md.pet
tests/toml/: config.toml
tests/xml/: pom.xml
tests/yaml/: config.yaml
