[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pet-doc"
version = "2.0.0"
description = "Program Enhanced Text — documentation automation tool"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = ["pyyaml"]
keywords = ["documentation", "template", "markdown", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Environment :: Console",
    "Intended Audience :: Developers",
]

[project.scripts]
pet = "pet.cli:main"

[project.urls]
Homepage = "https://github.com/verhasp/pet"

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/pet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
